[package]
name = "packet_capture"
repository = "https://github.com/nyantec/packet-capture"
version = "1.0.0"
authors = ["The packet-capture Authors <oss@nyantec.com>"]
edition = "2018"
license = "MirOS"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log-writer = { git = "https://github.com/nyantec/log-writer.git", branch = "main", features = [ "serde" ] }
thiserror = "1.0"
log = "0.4"
env_logger = "0.8"
afpacket = "0.2"
pcap-file = "1.1"
byteorder = "1.4"
serde_yaml = "0.8"
serde = { version = "1.0", features = [ "derive" ] }
getopts = "0.2"
iptool = { git = "https://github.com/nyantec/iptool", branch = "main" }
libc = "0.2"
